--- a/_inc/css/wp-tiles.css
+++ b/_inc/css/wp-tiles.css
@@ -1,23 +1,45 @@
-/* line 1, ../scss/wp-tiles.scss */
+/* line 10, ../scss/wp-tiles.scss */
+ul.template-selector {
+  list-style: none;
+}
+/* line 13, ../scss/wp-tiles.scss */
+ul.template-selector li {
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #252525), color-stop(100%, #0a0a0a));
+  background-image: -webkit-linear-gradient(#252525, #0a0a0a);
+  background-image: -moz-linear-gradient(#252525, #0a0a0a);
+  background-image: -o-linear-gradient(#252525, #0a0a0a);
+  background-image: linear-gradient(#252525, #0a0a0a);
+  display: inline;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+  text-align: center;
+  padding: 6px 9px;
+}
+
+/* line 25, ../scss/wp-tiles.scss */
 .wp-tile-container {
   width: auto;
-  height: 1000px;
+  height: auto;
   background: none;
-  overflow: hidden;
+  overflow: visible;
 }
-/* line 7, ../scss/wp-tiles.scss */
+/* line 31, ../scss/wp-tiles.scss */
 .wp-tile-container .grid {
-  overflow-y: auto;
-  overflow-x: hidden;
   top: 0;
   bottom: 0;
   width: 100%;
   height: 100%;
   position: relative;
   -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
 }
-/* line 18, ../scss/wp-tiles.scss */
+/* line 40, ../scss/wp-tiles.scss */
 .wp-tile-container .grid > div {
+  -webkit-box-shadow: 6px 6px 10px;
+  -moz-box-shadow: 6px 6px 10px;
+  box-shadow: 6px 6px 10px;
   position: absolute;
   font-size: 13px;
   background-color: #EEE;
@@ -25,7 +47,11 @@
   overflow: hidden;
   cursor: pointer;
 }
-/* line 27, ../scss/wp-tiles.scss */
+/* line 49, ../scss/wp-tiles.scss */
+.wp-tile-container .grid > div:hover {
+  outline: 1px solid #ccc;
+}
+/* line 54, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-bg {
   background-size: cover;
   background-repeat: no-repeat;
@@ -34,13 +60,13 @@
   height: 100%;
   background-color: #282828;
 }
-/* line 36, ../scss/wp-tiles.scss */
+/* line 63, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-color {
   position: absolute;
   width: 100%;
   height: 100%;
 }
-/* line 42, ../scss/wp-tiles.scss */
+/* line 69, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-byline {
   position: absolute;
   left: 0;
@@ -50,7 +76,7 @@
   background: rgba(0, 0, 0, 0.8);
   padding: 5px;
 }
-/* line 52, ../scss/wp-tiles.scss */
+/* line 79, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .title {
   font-size: 16px;
   font-weight: 600;
@@ -61,7 +87,7 @@
   padding: 5px;
   padding-top: 2px;
 }
-/* line 63, ../scss/wp-tiles.scss */
+/* line 90, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .category {
   padding: 5px;
   font-size: 10px;
@@ -75,14 +101,14 @@
   overflow: hidden;
   text-overflow: ellipsis;
 }
-/* line 77, ../scss/wp-tiles.scss */
+/* line 104, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-text-only {
   background-color: transparent;
   width: 100%;
   height: 100%;
   opacity: 1;
 }
-/* line 84, ../scss/wp-tiles.scss */
+/* line 111, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-text-only .title {
   font-size: 24px;
   line-height: 1.15em;
@@ -91,7 +117,7 @@
   width: 85%;
   height: 6.4em;
 }
-/* line 93, ../scss/wp-tiles.scss */
+/* line 120, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-text-only .category {
   color: #303030;
   font-style: normal;
