--- a/_inc/css/wp-tiles.css
+++ b/_inc/css/wp-tiles.css
@@ -9,6 +9,7 @@ ul.template-selector li {
   background-image: -moz-linear-gradient(#252525, #0a0a0a);
   background-image: -o-linear-gradient(#252525, #0a0a0a);
   background-image: linear-gradient(#252525, #0a0a0a);
+  border: 1px solid #ffffff;
   display: inline;
   border-radius: 10px;
   color: white;
@@ -16,15 +17,19 @@ ul.template-selector li {
   text-align: center;
   padding: 6px 9px;
 }
+/* line 24, ../scss/wp-tiles.scss */
+ul.template-selector li:hover {
+  border: 1px solid #999999;
+}
 
-/* line 25, ../scss/wp-tiles.scss */
+/* line 30, ../scss/wp-tiles.scss */
 .wp-tile-container {
   width: auto;
   height: auto;
   background: none;
   overflow: visible;
 }
-/* line 31, ../scss/wp-tiles.scss */
+/* line 36, ../scss/wp-tiles.scss */
 .wp-tile-container .grid {
   top: 0;
   bottom: 0;
@@ -35,7 +40,7 @@ ul.template-selector li {
   -moz-user-select: none;
   user-select: none;
 }
-/* line 40, ../scss/wp-tiles.scss */
+/* line 45, ../scss/wp-tiles.scss */
 .wp-tile-container .grid > div {
   -webkit-box-shadow: 6px 6px 10px;
   -moz-box-shadow: 6px 6px 10px;
@@ -47,11 +52,11 @@ ul.template-selector li {
   overflow: hidden;
   cursor: pointer;
 }
-/* line 49, ../scss/wp-tiles.scss */
+/* line 54, ../scss/wp-tiles.scss */
 .wp-tile-container .grid > div:hover {
   outline: 1px solid #ccc;
 }
-/* line 54, ../scss/wp-tiles.scss */
+/* line 59, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-bg {
   background-size: cover;
   background-repeat: no-repeat;
@@ -60,13 +65,13 @@ ul.template-selector li {
   height: 100%;
   background-color: #282828;
 }
-/* line 63, ../scss/wp-tiles.scss */
+/* line 68, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-color {
   position: absolute;
   width: 100%;
   height: 100%;
 }
-/* line 69, ../scss/wp-tiles.scss */
+/* line 74, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-byline {
   position: absolute;
   left: 0;
@@ -76,7 +81,7 @@ ul.template-selector li {
   background: rgba(0, 0, 0, 0.8);
   padding: 5px;
 }
-/* line 79, ../scss/wp-tiles.scss */
+/* line 84, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .title {
   font-size: 16px;
   font-weight: 600;
@@ -87,7 +92,7 @@ ul.template-selector li {
   padding: 5px;
   padding-top: 2px;
 }
-/* line 90, ../scss/wp-tiles.scss */
+/* line 95, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .category {
   padding: 5px;
   font-size: 10px;
@@ -101,14 +106,14 @@ ul.template-selector li {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-/* line 104, ../scss/wp-tiles.scss */
+/* line 109, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-text-only {
   background-color: transparent;
   width: 100%;
   height: 100%;
   opacity: 1;
 }
-/* line 111, ../scss/wp-tiles.scss */
+/* line 116, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-text-only .title {
   font-size: 24px;
   line-height: 1.15em;
@@ -117,7 +122,7 @@ ul.template-selector li {
   width: 85%;
   height: 6.4em;
 }
-/* line 120, ../scss/wp-tiles.scss */
+/* line 125, ../scss/wp-tiles.scss */
 .wp-tile-container .grid .tile-text-only .category {
   color: #303030;
   font-style: normal;
