--- a/assets/css/wp-tiles.css
+++ b/assets/css/wp-tiles.css
@@ -1,192 +1,1 @@
-/**************************************
-    Admin
- **************************************/
-/* line 13, ../scss/wp-tiles.scss */
-.grid-template-editor {
-  width: 100%;
-  height: 100px;
-  max-width: 100%;
-  font-family: monospace;
-  letter-spacing: 0.5em; }
-
-/* line 22, ../scss/wp-tiles.scss */
-.wp-tiles-tile-letter {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  height: 1em;
-  width: 1em;
-  font-size: 2em; }
-
-/**************************************
-    Frontend
- **************************************/
-/* line 39, ../scss/wp-tiles.scss */
-.template-selector {
-  list-style: none; }
-  /* line 42, ../scss/wp-tiles.scss */
-  .template-selector li {
-    background-image: -moz-linear-gradient(#252525, #0a0a0a);
-    background-image: -webkit-linear-gradient(#252525, #0a0a0a);
-    background-image: linear-gradient(#252525, #0a0a0a);
-    border: 1px solid #ffffff;
-    display: inline;
-    border-radius: 10px;
-    color: white;
-    cursor: pointer;
-    text-align: center;
-    padding: 6px 9px; }
-    /* line 53, ../scss/wp-tiles.scss */
-    .template-selector li:hover {
-      border: 1px solid #999999; }
-
-/* ==========================================================================
-   Base Styles
-   ========================================================================== */
-/* line 64, ../scss/wp-tiles.scss */
-.wp-tiles-container {
-  width: auto;
-  height: auto;
-  background: none;
-  overflow: visible; }
-
-/* line 71, ../scss/wp-tiles.scss */
-.wp-tiles-grid {
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  position: relative;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  user-select: none; }
-
-/* line 80, ../scss/wp-tiles.scss */
-.wp-tiles-tile {
-  position: absolute;
-  font-size: 13px;
-  background-color: #EEE;
-  padding: 0;
-  overflow: hidden;
-  cursor: pointer; }
-  /* line 81, ../scss/wp-tiles.scss */
-  .wp-tiles-tile.wp-tiles-legacy .wp-tiles-tile {
-    -moz-box-shadow: 6px 6px 10px;
-    -webkit-box-shadow: 6px 6px 10px;
-    box-shadow: 6px 6px 10px; }
-  /* line 91, ../scss/wp-tiles.scss */
-  .wp-tiles-tile:hover {
-    outline: 1px solid #ccc; }
-
-/* line 96, ../scss/wp-tiles.scss */
-.wp-tiles-byline {
-  max-height: 100%; }
-
-/* ==========================================================================
-   BASE: Tile with BG image
-   ========================================================================== */
-/* line 103, ../scss/wp-tiles.scss */
-.wp-tiles-tile-bg {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-size: cover;
-  background-position: 50% 50%; }
-
-/* line 112, ../scss/wp-tiles.scss */
-.wp-tiles-tile-with-image .wp-tiles-byline {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.8);
-  padding: 5px;
-  max-height: 100%; }
-/* line 123, ../scss/wp-tiles.scss */
-.wp-tiles-tile-with-image .wp-tiles-byline-title {
-  margin: 0;
-  color: white;
-  overflow: hidden;
-  padding: 5px;
-  padding-top: 2px; }
-/* line 135, ../scss/wp-tiles.scss */
-.wp-tiles-tile-with-image .wp-tiles-byline-content {
-  padding: 5px;
-  font-size: 10px;
-  font-weight: 600;
-  color: #EEE;
-  width: 90%;
-  overflow: hidden; }
-
-/* ==========================================================================
-   BASE: Text Only
-   ========================================================================== */
-/* line 152, ../scss/wp-tiles.scss */
-.wp-tiles-tile-text-only {
-  background-color: transparent;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  padding: 5px; }
-  /* line 162, ../scss/wp-tiles.scss */
-  .wp-tiles-tile-text-only .wp-tiles-byline-title {
-    margin: 0;
-    font-size: 1.5em;
-    line-height: 1.15em;
-    padding-top: 15px;
-    color: #282828;
-    width: 85%; }
-  /* line 172, ../scss/wp-tiles.scss */
-  .wp-tiles-tile-text-only .wp-tiles-byline-content {
-    color: #303030;
-    font-style: normal;
-    font-size: 14px;
-    font-weight: 600; }
-
-/* ==========================================================================
-   Styles
-   ========================================================================== */
-/**************************************
-    Show-on-hover byline
- **************************************/
-/* line 193, ../scss/wp-tiles.scss */
-.wp-tiles-style.byline-hover-effect .wp-tiles-tile-with-image .wp-tiles-byline {
-  display: none; }
-
-/*
-.wp-tiles-tile-text-only {
-    background-color: transparent;
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-
-}*/
-/*.wp-tiles-tile-bg {
-    background-size: cover;
-    background-repeat: no-repeat;
-    //background-position: top center;
-    background-position: center center; // @since 0.2.1
-    width: 100%;
-    height: 100%;
-    background-color: #282828;
-}
-
-.wp-tiles-tile-color {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
-.wp-tiles-tile-byline {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 60px;
-    background: rgba(0, 0, 0, 0.8);
-    padding: 5px;
-}*/
+.grid-template-editor{width:100%;height:100px;max-width:100%;font-family:monospace;letter-spacing:0.5em}.wp-tiles-tile-letter{position:absolute;top:0;left:0;right:0;bottom:0;margin:auto;height:1em;width:1em;font-size:2em}.wp-tiles-container.wp-tiles-tile-demo{height:276px;width:276px;margin:0 auto}.wp-tiles-container.wp-tiles-tile-demo .wp-tiles-tile{background-color:#3cc;width:266px;height:266px;display:block}.wp-tiles-container.wp-tiles-tile-demo .wp-tiles-tile-bg{background-image:url('../images/tile-demo-1.jpg?1398890921')}.wp-tiles-container.wp-tiles-tile-demo .wp-tiles-byline{background-color:rgba(51,204,204,0.5);overflow:hidden}.template-selector{list-style:none}.template-selector li{background-image:-moz-linear-gradient(#252525,#0a0a0a);background-image:-webkit-linear-gradient(#252525,#0a0a0a);background-image:linear-gradient(#252525,#0a0a0a);border:1px solid #ffffff;display:inline;border-radius:10px;color:white;cursor:pointer;text-align:center;padding:6px 9px}.template-selector li:hover{border:1px solid #999999}.wp-tiles-container{width:auto;height:auto;background:none;overflow:visible}.wp-tiles-grid{top:0;bottom:0;width:100%;position:relative;-webkit-user-select:none;-moz-user-select:none;user-select:none}.wp-tiles-tile{position:absolute;font-size:13px;background-color:#EEE;padding:0;overflow:hidden;cursor:pointer}.wp-tiles-tile.wp-tiles-legacy .wp-tiles-tile{-moz-box-shadow:6px 6px 10px;-webkit-box-shadow:6px 6px 10px;box-shadow:6px 6px 10px}.wp-tiles-tile:hover{outline:1px solid #ccc}.wp-tiles-byline{max-height:100%}.wp-tiles-tile-bg{position:absolute;top:0;left:0;right:0;bottom:0;background-size:cover;background-position:50% 50%}.wp-tiles-tile-with-image .wp-tiles-byline{position:absolute;left:0;right:0;background:rgba(0,0,0,0.8);padding:5px;max-height:100%}.wp-tiles-byline-align-top .wp-tiles-tile-with-image .wp-tiles-byline{top:0}.wp-tiles-byline-align-bottom .wp-tiles-tile-with-image .wp-tiles-byline{bottom:0}.wp-tiles-tile-with-image .wp-tiles-byline-title{margin:0;color:white;overflow:hidden;padding:5px;padding-top:2px}.wp-tiles-tile-with-image .wp-tiles-byline-content{padding:5px;font-size:10px;font-weight:600;color:#EEE;width:90%;overflow:hidden}.wp-tiles-tile-text-only{background-color:transparent;width:100%;height:100%;opacity:1;padding:5px}.wp-tiles-tile-text-only .wp-tiles-byline-title{margin:0;font-size:1.5em;line-height:1.15em;padding-top:15px;color:#282828;width:85%}.wp-tiles-tile-text-only .wp-tiles-byline-content{color:#303030;font-style:normal;font-size:14px;font-weight:600}.wp-tiles-byline-animated .wp-tiles-byline,.wp-tiles-image-animated .wp-tiles-tile-bg{-moz-transition:all 300ms ease-out;-o-transition:all 300ms ease-out;-webkit-transition:all 300ms ease-out;transition:all 300ms ease-out}.wp-tiles-byline-slide-up .wp-tiles-tile:hover .wp-tiles-byline,.wp-tiles-byline-slide-down .wp-tiles-tile:hover .wp-tiles-byline,.wp-tiles-byline-slide-left .wp-tiles-tile:hover .wp-tiles-byline,.wp-tiles-byline-slide-right .wp-tiles-tile:hover .wp-tiles-byline{-moz-transform:translateX(0%);-ms-transform:translateX(0%);-webkit-transform:translateX(0%);transform:translateX(0%);-moz-transform:translateY(0%);-ms-transform:translateY(0%);-webkit-transform:translateY(0%);transform:translateY(0%)}.wp-tiles-byline-slide-up .wp-tiles-byline{bottom:0;-moz-transform:translateY(100%);-ms-transform:translateY(100%);-webkit-transform:translateY(100%);transform:translateY(100%)}.wp-tiles-byline-slide-down .wp-tiles-byline{top:0;-moz-transform:translateY(-100%);-ms-transform:translateY(-100%);-webkit-transform:translateY(-100%);transform:translateY(-100%)}.wp-tiles-byline-slide-left .wp-tiles-byline{right:-100%;-moz-transform:translateX(100%);-ms-transform:translateX(100%);-webkit-transform:translateX(100%);transform:translateX(100%)}.wp-tiles-byline-slide-right .wp-tiles-byline{-moz-transform:translateX(-100%);-ms-transform:translateX(-100%);-webkit-transform:translateX(-100%);transform:translateX(-100%)}.wp-tiles-byline-fade-in .wp-tiles-byline{opacity:0}.wp-tiles-byline-fade-in .wp-tiles-tile:hover .wp-tiles-byline{opacity:1}.wp-tiles-image-scale-up .wp-tiles-tile:hover .wp-tiles-tile-bg,.wp-tiles-image-scale-down .wp-tiles-tile-bg{-moz-transform:scale(1.2);-ms-transform:scale(1.2);-webkit-transform:scale(1.2);transform:scale(1.2)}.wp-tiles-image-scale-down .wp-tiles-tile:hover .wp-tiles-tile-bg{-moz-transform:scale(1);-ms-transform:scale(1);-webkit-transform:scale(1);transform:scale(1)}.wp-tiles-image-saturate .wp-tiles-tile:hover .wp-tiles-tile-bg,.wp-tiles-image-desaturate .wp-tiles-tile-bg{filter:none;-webkit-filter:grayscale(0%)}.wp-tiles-image-saturate .wp-tiles-tile-bg,.wp-tiles-image-desaturate .wp-tiles-tile:hover .wp-tiles-tile-bg{filter:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='saturate' values='0.5'/></filter></svg>#grayscale");filter:gray alpha(opacity=50);-webkit-filter:grayscale(50%);-webkit-backface-visibility:hidden}
