--- a/assets/scss/wp-tiles.scss
+++ b/assets/scss/wp-tiles.scss
@@ -33,6 +33,28 @@
     font-size: 2em;
 }
 
+.wp-tiles-container.wp-tiles-tile-demo {
+    height: 276px;
+    width:  276px;
+    margin: 0 auto;
+
+    .wp-tiles-tile {
+        background-color: rgb(51, 204, 204);
+        width: 266px;
+        height: 266px;
+        display: block;
+    }
+
+    .wp-tiles-tile-bg {
+        background-image: image-url('tile-demo-1.jpg');
+    }
+
+    .wp-tiles-byline {
+        background-color: rgba(51, 204, 204, 0.5);
+        overflow: hidden;
+    }
+}
+
 /**************************************
     Frontend
  **************************************/
@@ -113,7 +135,13 @@
         position: absolute;
         left: 0;
         right: 0;
-        bottom: 0;
+
+        .wp-tiles-byline-align-top & {
+            top: 0;
+        }
+        .wp-tiles-byline-align-bottom & {
+            bottom: 0;
+        }
 
         background: rgba(0, 0, 0, 0.8);
         padding: 5px;
@@ -181,61 +209,130 @@
 
 
 /* ==========================================================================
-   Styles
+   Animations
    ========================================================================== */
 
+%animated {
+    @include transition(all 300ms ease-out);
+}
+%no-translate {
+    @include transform(translateX(0%));
+    @include transform(translateY(0%));
+}
+
 /**************************************
-    Show-on-hover byline
+    BYLINE
  **************************************/
-.wp-tiles-style {
-    &.byline-hover-effect {
-        .wp-tiles-tile-with-image {
-            .wp-tiles-byline {
-                display: none;
-            }
-        }
-
-        &.slide {
-
-        }
+.wp-tiles-byline-animated {
+    .wp-tiles-byline {
+        @extend %animated;
     }
-
-
 }
 
-
-/*
-.wp-tiles-tile-text-only {
-    background-color: transparent;
-    width: 100%;
-    height: 100%;
-    opacity: 1;
-
-}*/
-
-
-/*.wp-tiles-tile-bg {
-    background-size: cover;
-    background-repeat: no-repeat;
-    //background-position: top center;
-    background-position: center center; // @since 0.2.1
-    width: 100%;
-    height: 100%;
-    background-color: #282828;
+.wp-tiles-byline-slide-up {
+    .wp-tiles-byline {
+        bottom: 0;
+        @include transform(translateY(100%));
+    }
+    .wp-tiles-tile:hover .wp-tiles-byline{
+        @extend %no-translate;
+    }
+}
+.wp-tiles-byline-slide-down {
+    .wp-tiles-byline {
+        top: 0;
+        @include transform(translateY(-100%));
+    }
+    .wp-tiles-tile:hover .wp-tiles-byline{
+        @extend %no-translate;
+    }
 }
 
-.wp-tiles-tile-color {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+.wp-tiles-byline-slide-left {
+    .wp-tiles-byline {
+        right: -100%;
+        @include transform(translateX(100%));
+    }
+    .wp-tiles-tile:hover .wp-tiles-byline{
+        @extend %no-translate;
+    }
+}
+.wp-tiles-byline-slide-right {
+    .wp-tiles-byline {
+        @include transform(translateX(-100%));
+    }
+    .wp-tiles-tile:hover .wp-tiles-byline{
+        @extend %no-translate;
+    }
+}
+.wp-tiles-byline-fade-in {
+    .wp-tiles-byline {
+        opacity: 0;
+    }
+    .wp-tiles-tile:hover .wp-tiles-byline{
+        opacity: 1;
+    }
 }
 
-.wp-tiles-tile-byline {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 60px;
-    background: rgba(0, 0, 0, 0.8);
-    padding: 5px;
-}*/
+/**************************************
+    IMAGE
+ **************************************/
+.wp-tiles-image-animated {
+    .wp-tiles-tile-bg {
+        @extend %animated;
+    }
+}
+
+%scale-up {
+    @include transform(scale(1.2));
+}
+.wp-tiles-image-scale-up {
+    .wp-tiles-tile-bg {
+
+    }
+    .wp-tiles-tile:hover .wp-tiles-tile-bg {
+        @extend %scale-up;
+    }
+}
+.wp-tiles-image-scale-down {
+    .wp-tiles-tile-bg {
+        @extend %scale-up;
+    }
+    .wp-tiles-tile:hover .wp-tiles-tile-bg {
+        @include transform(scale(1));
+    }
+}
+
+%saturate {
+    filter: none;
+    -webkit-filter: grayscale(0%);
+}
+%desaturate {
+    /* Firefox 10+ */
+    filter: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'><filter id='grayscale'><feColorMatrix type='saturate' values='0.5'/></filter></svg>#grayscale");
+    /* IE6-9 */
+    filter: gray alpha(opacity=50);
+    /* Chrome 19+ & Safari 6+ */
+    -webkit-filter: grayscale(50%);
+    /* Fix for transition flickering */
+    -webkit-backface-visibility: hidden;
+}
+
+.wp-tiles-image-saturate {
+    .wp-tiles-tile-bg {
+        @extend %desaturate;
+    }
+    .wp-tiles-tile:hover .wp-tiles-tile-bg {
+        @extend %saturate;
+    }
+}
+
+.wp-tiles-image-desaturate {
+    .wp-tiles-tile-bg {
+        @extend %saturate;
+
+    }
+    .wp-tiles-tile:hover .wp-tiles-tile-bg {
+        @extend %desaturate;
+    }
+}
